header and main content done

--- a/index.html
+++ b/index.html
@@ -4,12 +4,42 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
   <script src="./js/script.js" defer></script>
   <title>Bookmarking</title>
 </head>
 <body>
   
+  <header>
+    <img src="./img/logo-bookmark.svg" alt="logo bookmark">
+    <nav class="menu">
+      <ul>
+        <li class="menu-item"><a href="#">Features</a></li>
+        <li class="menu-item"><a href="#">Princing</a></li>
+        <li class="menu-item"><a href="#">Contact</a></li>
+        <li class="menu-item login"><a href="#" id="open-modal">Login</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="main-container">
+    <div class="left-box">
+      <h1 class="main-title"> A Simple Bookmark Manager</h1>
+
+      <p class="paragraph">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try for free.
+      </p>
+
+      <a href="#">Get it on Chrome</a>
+      <a href="#">Get it on Firefox</a>
+    </div>
+    <div class="right-box">
+      <img src="./img/illustration-hero.svg" alt="">
+      <div class="shape-bg"></div>
+    </div>
+  </main>
+
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
