--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <img src="./img/logo-bookmark.svg" alt="logo bookmark">
     <nav class="menu">
       <ul>
-        <li class="menu-item"><a href="#">Features</a></li>
-        <li class="menu-item"><a href="#">Princing</a></li>
-        <li class="menu-item"><a href="#">Contact</a></li>
+        <li class="menu-item"><a href="#features">Features</a></li>
+        <li class="menu-item"><a href="#princing">Princing</a></li>
+        <li class="menu-item"><a href="#contact">Contact</a></li>
         <li class="menu-item login"><a href="#" id="open-modal">Login</a></li>
       </ul>
     </nav>
@@ -39,6 +39,53 @@
       <div class="shape-bg"></div>
     </div>
   </main>
+
+  <section class="features-container" id="features">
+    <div>
+      <h2 class="subtitle">Features</h2>
+
+      <p class="paragraph">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+
+      <ul class="features-list">
+        <li class="bookmarking active">Simple Bookmarking</li>
+        <li class="searching">Speedy Searching</li>
+        <li class="sharing">Easy Sharing</li>
+      </ul>
+    </div>
+
+    <div class="feature feature-1" style="display: none;">
+      <img src="./img/illustration-features-tab-1.svg" alt="screen showing without details the features of bookmarking website">
+
+      <div class="feature-description">
+          <h3 class="subtitle">Bookmark is one click</h3>
+          <p class="paragraph">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control how you manage your favorites sites</p>
+
+          <a href="#">More info</a>
+      </div>
+    </div>
+
+    <div class="feature feature-2 active">
+      <img src="./img/illustration-features-tab-2.svg" alt="screen showing without details the features of bookmarking website">
+
+      <div class="feature-description">
+          <h3 class="subtitle">Intelligent search</h3>
+          <p class="paragraph">Our powerful seach feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+
+          <a href="#">More info</a>
+      </div>
+    </div>
+
+    <div class="feature feature-3">
+      <img src="./img/illustration-features-tab-3.svg" alt="screen showing without details the features of bookmarking website">
+
+      <div class="feature-description">
+          <h3 class="subtitle">Share your bookmarks</h3>
+          <p class="paragraph">Easily your bookmarks and collections with others. Create a shareable link that you can send at the click of a button</p>
+
+          <a href="#">More info</a>
+      </div>
+    </div>
+  </section>
 
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
