fixed minor errors

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </ul>
     </div>
 
-    <div class="feature feature-1" style="display: none;">
+    <div class="feature active" id="bookmarking">
       <img src="./img/illustration-features-tab-1.svg" alt="screen showing without details the features of bookmarking website">
 
       <div class="feature-description">
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div class="feature feature-2 active">
+    <div class="feature" id="searching">
       <img src="./img/illustration-features-tab-2.svg" alt="screen showing without details the features of bookmarking website">
 
       <div class="feature-description">
@@ -75,7 +75,7 @@
       </div>
     </div>
 
-    <div class="feature feature-3">
+    <div class="feature" id="sharing">
       <img src="./img/illustration-features-tab-3.svg" alt="screen showing without details the features of bookmarking website">
 
       <div class="feature-description">
